# WellCare-Hospital-System

./: .env.example  .gitignore  .pre-commit-config.yaml  .progress  LICENSE  README.md  hash_output.txt  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  verify_app.py
.github/workflows/: ci.yml
src/wellcare/: __init__.py  __main__.py  app.py  cache.py  config.py  database.py  logger.py  models.py
src/wellcare/frames/: __init__.py  about.py  appointments.py  dashboard.py  home.py  login.py  patient_entry.py  search.py
src/wellcare/ui/: __init__.py  animations.py  theme.py  widgets.py
src/wellcare/utils/: __init__.py  auth.py  image_loader.py  pdf.py  validators.py
tests/: __init__.py  conftest.py  test_app.py  test_appointments_frame.py  test_auth.py  test_config.py  test_dashboard.py  test_database.py  test_login_frame.py  test_patient_entry_frame.py  test_validators.py
