[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wellcare-hospital-system"
version = "1.0.0"
description = "A professional, object-oriented Clinic Management System with real-time analytics"
readme = "README.md"
authors = [
    {name = "Aditya Bhure", email = "adityabhure03@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "customtkinter>=5.2.0",
    "fpdf2>=2.5.0",
    "Pillow>=9.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.0.0",
]

[project.scripts]
wellcare = "src.wellcare.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "SIM", "B", "C4", "RUF"]
ignore = ["SIM117", "SIM108", "S101", "RUF012"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
mypy_path = "."
explicit_package_bases = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 50

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise AssertionError",
    "raise NotImplementedError",
]

